# Projekt_JPO2024_Kalk

./: .gitignore.txt  Projekt.sln  README.md
Projekt/: CMakeCache.txt  CMakeLists.txt  Projekt.vcxproj  Projekt.vcxproj.filters  kalkulator.cpp  kalkulator.h  kalkulator_bin.cpp  kalkulator_bin.h  kalkulator_hex.cpp  kalkulator_hex.h  kalkulator_octa.cpp  kalkulator_octa.h  main.cpp
Projekt/Nowy folder/: CMakeCache.txt
Projekt/x64/Debug/: Projekt.exe.recipe  Projekt.ilk  kalkulator.obj.enc  main.obj.enc  vc143.idb
Projekt/x64/Debug/Projekt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Projekt.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Projekt/źródło/: Projekt.vcxproj
Projekt_GTest/: CMakeLists.txt.txt  Projekt_GTest.vcxproj  test.cpp
Projekt_GTest/x64/Debug/: Projekt_GTest.exe.recipe  Projekt_GTest.vcxproj.FileListAbsolute.txt
Projekt_GTest/x64/Debug/Projekt_GTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Projekt_GTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
